# foil

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
foil/: Cargo.toml  expand  out.rs
foil-macros/: Cargo.toml
foil-macros/src/: attrs.rs  constructors.rs  create.rs  delete.rs  entity.rs  lib.rs  types.rs  update.rs  value.rs
foil/src/: lib.rs
foil/src/entity/: mod.rs  test.rs
foil/src/manager/: mod.rs  value.rs
foil/src/manager/display/: mod.rs  test.rs
foil/src/manager/impls/: executor.rs  log.rs  mock.rs
