[package]
name = "foil-macros"
version = "0.1.22"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
itertools = "0.10.3"
once_cell = "1.9.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "1.0.86"

[features]
all-databases = ["mysql", "mssql", "postgres", "sqlite", "any"]
mysql = []
mssql = []
postgres = []
sqlite = []
any = []