[package]
name = "foil"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
futures = "0.3.17"
itertools = "0.10.3"
sqlx = { version = "0.5.9", default-features = false }
thiserror = "1.0.30"
tokio = { version = "1.15.0", optional = true, features = ["test-util", "macros"] }
vec1 = "1.8.0"

[dev-dependencies]
foil = { path = ".", features = ["runtime-tokio-rustls", "all", "tokio"]}
insta = "1.8.0"

[features]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

all = ["all-databases", "all-types", "all-managers"]

all-databases = ["mysql", "mssql", "postgres", "sqlite", "any"]
mysql = ["sqlx/mysql"]
mssql = ["sqlx/mssql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
any = ["sqlx/any"]

all-types = ["bigdecimal", "decimal", "json", "time", "chrono", "ipnetwork", "mac_address", "uuid", "bit-vec", "bstr", "git2"]
bigdecimal = ["sqlx/bigdecimal"]
decimal = ["sqlx/decimal"]
json = ["sqlx/json"]
time = ["sqlx/time"]
chrono = ["sqlx/chrono"]
ipnetwork = ["sqlx/ipnetwork"]
mac_address = ["sqlx/mac_address"]
uuid = ["sqlx/uuid"]
bit-vec = ["sqlx/bit-vec"]
bstr = ["sqlx/bstr"]
git2 = ["sqlx/git2"]

all-managers = ["test-manager", "log-manager"]
test-manager = ["sqlite"]
log-manager = []
